--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Quiz — Plano de Treino + Dieta</title>
+  <title>Plano de Treino + Dieta</title>
   <link rel="icon" type="image/png" href="https://png.pngtree.com/png-clipart/20230925/original/pngtree-gym-logo-vector-weight-icon-club-vector-png-image_12765829.png" />
 
   <style>
@@ -2265,3 +2265,4 @@
 </body>
 
 </html>
+
